@@ -16,7 +16,10 @@ import com.powsybl.sld.model.nodes.Node.NodeType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -32,25 +35,30 @@ public abstract class AbstractCgmesLayout implements Layout {
 
     private static final Logger LOG = LoggerFactory.getLogger(AbstractCgmesLayout.class);
 
-    protected static final double X_MARGIN = 20;
-    protected static final double Y_MARGIN = 10;
     protected static final double LINE_OFFSET = 20;
 
-    protected double minX = 0;
-    protected double minY = 0;
+    protected double minX = Double.MAX_VALUE;
+    protected double minY = Double.MAX_VALUE;
+    protected double maxX = Double.MIN_VALUE;
+    protected double maxY = Double.MIN_VALUE;
     protected boolean rotatedBus = false;
     protected boolean isNodeBreaker = true;
     protected boolean fixTransformersLabel = false;
 
     protected Network network;
+    private String cgmesDiagramName;
 
-    protected void setMin(double x, double y) {
-        if (minX == 0 || x < minX) {
-            minX = x;
-        }
-        if (minY == 0 || y < minY) {
-            minY = y;
-        }
+    protected AbstractCgmesLayout(String cgmesDiagramName) {
+        this.cgmesDiagramName = cgmesDiagramName;
+    }
+
+    protected void setMinMax(DiagramPoint diagramPoint) {
+        double x = diagramPoint.getX();
+        double y = diagramPoint.getY();
+        minX = Math.min(x, minX);
+        minY = Math.min(y, minY);
+        maxX = Math.max(x, maxX);
+        maxY = Math.max(y, maxY);
     }
 
     protected VoltageLevelGraph removeFictitiousNodes(VoltageLevelGraph graph, VoltageLevel vl) {
@@ -71,10 +79,10 @@ public abstract class AbstractCgmesLayout implements Layout {
         return true;
     }
 
-    protected void setNodeCoordinates(VoltageLevel vl, VoltageLevelGraph graph, String diagramName, boolean useNames) {
+    protected void setNodeCoordinates(VoltageLevel vl, VoltageLevelGraph graph, String diagramName) {
         isNodeBreaker = TopologyKind.NODE_BREAKER.equals(vl.getTopologyKind());
         // skip line nodes: I need the coordinates of the adjacent node to know which side of the line belongs to this voltage level
-        graph.getNodes().stream().filter(node -> !isLineNode(node)).forEach(node -> setNodeCoordinates(vl, node, diagramName, useNames));
+        graph.getNodes().stream().filter(node -> !isLineNode(node)).forEach(node -> setNodeCoordinates(vl, node, diagramName));
         // set line nodes coordinates: I use the coordinates of the adjacent node to know which side of the line belongs to this voltage level
         graph.getNodes().stream().filter(this::isLineNode).forEach(node -> setLineNodeCoordinates(vl, node, diagramName));
     }
@@ -83,7 +91,7 @@ public abstract class AbstractCgmesLayout implements Layout {
         return Arrays.asList(LINE, DANGLING_LINE, VSC_CONVERTER_STATION, LCC_CONVERTER_STATION).contains(node.getComponentType());
     }
 
-    protected void setNodeCoordinates(VoltageLevel vl, Node node, String diagramName, boolean useNames) {
+    protected void setNodeCoordinates(VoltageLevel vl, Node node, String diagramName) {
         LOG.info("Setting coordinates of node {}, type {}, component type {}", node.getId(), node.getType(), node.getComponentType());
         switch (node.getType()) {
             case BUS:
@@ -104,10 +112,10 @@ public abstract class AbstractCgmesLayout implements Layout {
                             vl.getNodeBreakerView().getSwitch(switchNode.getId()) :
                             vl.getBusBreakerView().getSwitch(switchNode.getId());
                 CouplingDeviceDiagramData<Switch> switchDiagramData = sw != null ? sw.getExtension(CouplingDeviceDiagramData.class) : null;
-                setCouplingDeviceNodeCoordinates(switchNode, switchDiagramData, true, diagramName);
+                setCouplingDeviceNodeCoordinates(switchNode, switchDiagramData, diagramName);
                 break;
             case FEEDER:
-                setFeederNodeCoordinates(vl, node, diagramName, useNames);
+                setFeederNodeCoordinates(vl, node, diagramName);
                 break;
             default:
                 processDefaultNodeCase(vl, node, diagramName);
@@ -158,14 +166,15 @@ public abstract class AbstractCgmesLayout implements Layout {
 
     protected void setBusNodeCoordinates(BusNode node, NodeDiagramData<?> diagramData, String diagramName) {
         if (diagramData != null) {
-            NodeDiagramData<?>.NodeDiagramDataDetails diagramDetails = diagramData.getData(diagramName);
+            NodeDiagramData.NodeDiagramDataDetails diagramDetails = diagramData.getData(diagramName);
             if (diagramDetails != null) {
                 node.setX(diagramDetails.getPoint1().getX());
                 node.setY(diagramDetails.getPoint1().getY());
                 node.setPxWidth(computeBusWidth(diagramDetails));
                 rotatedBus = diagramDetails.getPoint1().getX() == diagramDetails.getPoint2().getX();
                 node.setOrientation(rotatedBus ? Orientation.UP : Orientation.RIGHT);
-                setMin(diagramDetails.getPoint1().getX(), diagramDetails.getPoint1().getY());
+                setMinMax(diagramDetails.getPoint1());
+                setMinMax(diagramDetails.getPoint2());
             } else {
                 LOG.warn("No CGMES-DL data for {} node {}, bus {}, diagramName {}", node.getType(), node.getId(), node.getName(), diagramName);
             }
@@ -174,14 +183,14 @@ public abstract class AbstractCgmesLayout implements Layout {
         }
     }
 
-    protected void setCouplingDeviceNodeCoordinates(EquipmentNode node, CouplingDeviceDiagramData<?> diagramData, boolean rotate, String diagramName) {
+    protected void setCouplingDeviceNodeCoordinates(EquipmentNode node, CouplingDeviceDiagramData<?> diagramData, String diagramName) {
         if (diagramData != null) {
-            CouplingDeviceDiagramData<?>.CouplingDeviceDiagramDetails diagramDetails = diagramData.getData(diagramName);
+            CouplingDeviceDiagramData.CouplingDeviceDiagramDetails diagramDetails = diagramData.getData(diagramName);
             if (diagramDetails != null) {
                 node.setX(diagramDetails.getPoint().getX());
                 node.setY(diagramDetails.getPoint().getY());
-                setOrientation(node, rotate, diagramDetails.getRotation());
-                setMin(diagramDetails.getPoint().getX(), diagramDetails.getPoint().getY());
+                setOrientation(node, true, diagramDetails.getRotation());
+                setMinMax(diagramDetails.getPoint());
             } else {
                 LOG.warn("No CGMES-DL data for {} node {}, name {}, diagramName {}", node.getType(), node.getId(), node.getName(), diagramName);
             }
@@ -191,7 +200,7 @@ public abstract class AbstractCgmesLayout implements Layout {
         }
     }
 
-    protected double computeBusWidth(NodeDiagramData<?>.NodeDiagramDataDetails diagramData) {
+    protected double computeBusWidth(NodeDiagramData.NodeDiagramDataDetails diagramData) {
         if (diagramData.getPoint1().getX() == diagramData.getPoint2().getX()) {
             return Math.abs(diagramData.getPoint1().getY() - diagramData.getPoint2().getY());
         } else {
@@ -199,7 +208,7 @@ public abstract class AbstractCgmesLayout implements Layout {
         }
     }
 
-    protected void setFeederNodeCoordinates(VoltageLevel vl, Node node, String diagramName, boolean useNames) {
+    protected void setFeederNodeCoordinates(VoltageLevel vl, Node node, String diagramName) {
         switch (node.getComponentType()) {
             case LOAD:
                 FeederNode loadNode = (FeederNode) node;
@@ -241,9 +250,8 @@ public abstract class AbstractCgmesLayout implements Layout {
                 CouplingDeviceDiagramData<TwoWindingsTransformer> transformerDiagramData = null;
                 if (transformer != null) {
                     transformerDiagramData = transformer.getExtension(CouplingDeviceDiagramData.class);
-                    setTransformersLabel(transformerNode, useNames, transformer.getNameOrId(), transformer.getId());
                 }
-                setCouplingDeviceNodeCoordinates(transformerNode, transformerDiagramData, false, diagramName);
+                setCouplingDeviceNodeCoordinates(transformerNode, transformerDiagramData, diagramName);
                 break;
             case THREE_WINDINGS_TRANSFORMER, THREE_WINDINGS_TRANSFORMER_LEG, THREE_WINDINGS_TRANSFORMER_PST_1,
                     THREE_WINDINGS_TRANSFORMER_PST_2, THREE_WINDINGS_TRANSFORMER_PST_3,
@@ -254,7 +262,6 @@ public abstract class AbstractCgmesLayout implements Layout {
                 ThreeWindingsTransformerDiagramData transformer3wDiagramData = null;
                 if (transformer3w != null) {
                     transformer3wDiagramData = transformer3w.getExtension(ThreeWindingsTransformerDiagramData.class);
-                    setTransformersLabel(transformer3wNode, useNames, transformer3w.getNameOrId(), transformer3w.getId());
                 }
                 setThreeWindingsTransformerNodeCoordinates(transformer3wNode, transformer3wDiagramData, diagramName);
                 break;
@@ -272,12 +279,12 @@ public abstract class AbstractCgmesLayout implements Layout {
 
     protected void setInjectionNodeCoordinates(FeederNode node, InjectionDiagramData<?> diagramData, boolean rotate, String diagramName) {
         if (diagramData != null) {
-            InjectionDiagramData<?>.InjectionDiagramDetails diagramDetails = diagramData.getData(diagramName);
+            InjectionDiagramData.InjectionDiagramDetails diagramDetails = diagramData.getData(diagramName);
             if (diagramDetails != null) {
                 node.setX(diagramDetails.getPoint().getX());
                 node.setY(diagramDetails.getPoint().getY());
                 setOrientation(node, rotate, diagramDetails.getRotation());
-                setMin(diagramDetails.getPoint().getX(), diagramDetails.getPoint().getY());
+                setMinMax(diagramDetails.getPoint());
             } else {
                 LOG.warn("No CGMES-DL data for {} {} node {}, injection {}, diagramName {}", node.getType(), node.getComponentType(), node.getId(), node.getName(), diagramName);
             }
@@ -305,7 +312,8 @@ public abstract class AbstractCgmesLayout implements Layout {
             if (diagramDetails != null) {
                 node.setX(diagramDetails.getPoint().getX());
                 node.setY(diagramDetails.getPoint().getY());
-                setMin(diagramDetails.getPoint().getX(), diagramDetails.getPoint().getY());
+                setOrientation(node, true, diagramDetails.getRotation());
+                setMinMax(diagramDetails.getPoint());
             } else {
                 LOG.warn("No CGMES-DL data for {} {} node {}, transformer {}, diagramName {}", node.getType(), node.getComponentType(), node.getId(), node.getName(), diagramName);
             }
@@ -341,7 +349,7 @@ public abstract class AbstractCgmesLayout implements Layout {
                 node.setX(linePoint.getX());
                 node.setY(linePoint.getY());
                 node.setOrientation(rotatedBus ? Orientation.RIGHT : Orientation.UP);
-                setMin(linePoint.getX(), linePoint.getY());
+                setMinMax(linePoint);
             } else {
                 LOG.warn("No CGMES-DL data for {} {} node {}, line {}, diagramName {}", node.getType(), node.getComponentType(), node.getId(), node.getName(), diagramName);
             }
@@ -367,7 +375,7 @@ public abstract class AbstractCgmesLayout implements Layout {
         if (adjacentNodes == null || adjacentNodes.isEmpty()) {
             return null;
         }
-        Node adjacentNode = adjacentNodes.get(0); // as we are working on a single voltage level a line node should be connected to only 1 node
+        Node adjacentNode = adjacentNodes.getFirst(); // as we are working on a single voltage level a line node should be connected to only 1 node
         // a line should not be connected to another line, so I should already have the coordinates of the adjacent node
         return new DiagramPoint(adjacentNode.getX(), adjacentNode.getY(), 0);
     }
@@ -379,9 +387,9 @@ public abstract class AbstractCgmesLayout implements Layout {
         return isLastPointCloser ? lineDiagramData.getLastPoint(diagramName, LINE_OFFSET) : lineDiagramData.getFirstPoint(diagramName, LINE_OFFSET);
     }
 
-    protected void shiftNodeCoordinates(Node node, double scaleFactor) {
-        node.setX(node.getX() - minX + (X_MARGIN / scaleFactor));
-        node.setY(node.getY() - minY + (Y_MARGIN / scaleFactor));
+    protected void shiftNodeCoordinates(Node node) {
+        node.setX(node.getX() - minX);
+        node.setY(node.getY() - minY);
     }
 
     protected void scaleNodeCoordinates(Node node, double scaleFactor) {
@@ -400,19 +408,18 @@ public abstract class AbstractCgmesLayout implements Layout {
     }
 
     public static void removeFictitiousSwitchNodes(VoltageLevelGraph graph, VoltageLevel vl) {
-        List<SwitchNode> fictitiousSwithcNodesToRemove = graph.getNodes().stream()
+        graph.getNodes().stream()
                 .filter(SwitchNode.class::isInstance)
                 .map(SwitchNode.class::cast)
                 .filter(node -> isFictitiousSwitchNode(node, vl))
                 .filter(node -> node.getAdjacentNodes().size() == 2)
-                .collect(Collectors.toList());
-        for (SwitchNode n : fictitiousSwithcNodesToRemove) {
-            Node node1 = n.getAdjacentNodes().get(0);
-            Node node2 = n.getAdjacentNodes().get(1);
-            LOG.info("Remove fictitious switch node {} between {} and {}", n.getName(), node1.getId(), node2.getId());
-            graph.removeNode(n);
-            graph.addEdge(node1, node2);
-        }
+                .forEach(n -> {
+                    Node node1 = n.getAdjacentNodes().get(0);
+                    Node node2 = n.getAdjacentNodes().get(1);
+                    LOG.info("Remove fictitious switch node {} between {} and {}", n.getName(), node1.getId(), node2.getId());
+                    graph.removeNode(n);
+                    graph.addEdge(node1, node2);
+                });
     }
 
     private static boolean isFictitiousSwitchNode(Node node, VoltageLevel vl) {
@@ -420,5 +427,15 @@ public abstract class AbstractCgmesLayout implements Layout {
                 vl.getNodeBreakerView().getSwitch(node.getId()) :
                 vl.getBusBreakerView().getSwitch(node.getId());
         return sw == null || sw.isFictitious();
+    }
+
+    public String getCgmesDiagramName() {
+        if (cgmesDiagramName == null && network != null) {
+            List<String> names = NetworkDiagramData.getDiagramsNames(network);
+            if (!names.isEmpty()) {
+                cgmesDiagramName = names.getFirst();
+            }
+        }
+        return cgmesDiagramName;
     }
 }
