@@ -14,10 +14,10 @@ import com.powsybl.iidm.network.VoltageLevel;
 import com.powsybl.sld.cgmes.dl.iidm.extensions.DiagramPoint;
 import com.powsybl.sld.cgmes.dl.iidm.extensions.LineDiagramData;
 import com.powsybl.sld.layout.LayoutParameters;
-import com.powsybl.sld.model.graphs.*;
 import com.powsybl.sld.model.coordinate.Point;
+import com.powsybl.sld.model.graphs.VoltageLevelGraph;
+import com.powsybl.sld.model.graphs.ZoneGraph;
 import com.powsybl.sld.model.nodes.BranchEdge;
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -33,9 +33,14 @@ public class CgmesZoneLayout extends AbstractCgmesLayout {
     private static final Logger LOG = LoggerFactory.getLogger(CgmesZoneLayout.class);
 
     private final ZoneGraph graph;
-    private List<VoltageLevelGraph> vlGraphs;
+    private final List<VoltageLevelGraph> vlGraphs;
 
     public CgmesZoneLayout(ZoneGraph graph, Network network) {
+        this(graph, network, null);
+    }
+
+    public CgmesZoneLayout(ZoneGraph graph, Network network, String cgmesDiagramName) {
+        super(cgmesDiagramName);
         this.network = Objects.requireNonNull(network);
         this.graph = Objects.requireNonNull(graph);
         vlGraphs = graph.getVoltageLevels();
@@ -51,14 +56,14 @@ public class CgmesZoneLayout extends AbstractCgmesLayout {
             LOG.warn("No substations in the zone: skipping coordinates assignment");
             return;
         }
-        String diagramName = layoutParam.getCgmesDiagramName();
+        String diagramName = getCgmesDiagramName();
         if (!checkDiagram(diagramName, "")) {
             return;
         }
         // assign coordinates
         for (VoltageLevelGraph vlGraph : vlGraphs) {
             VoltageLevel vl = network.getVoltageLevel(vlGraph.getVoltageLevelInfos().getId());
-            setNodeCoordinates(vl, vlGraph, diagramName, layoutParam.isCgmesUseNames());
+            setNodeCoordinates(vl, vlGraph, diagramName);
         }
         for (BranchEdge edge : graph.getLineEdges()) {
             VoltageLevel vl = network.getVoltageLevel(graph.getVoltageLevelGraph(edge.getNode1()).getVoltageLevelInfos().getId());
@@ -66,10 +71,10 @@ public class CgmesZoneLayout extends AbstractCgmesLayout {
         }
         // shift coordinates
         for (VoltageLevelGraph vlGraph : vlGraphs) {
-            vlGraph.getNodes().forEach(node -> shiftNodeCoordinates(node, layoutParam.getCgmesScaleFactor()));
+            vlGraph.getNodes().forEach(this::shiftNodeCoordinates);
         }
         for (BranchEdge edge : graph.getLineEdges()) {
-            shiftLineCoordinates(edge, layoutParam.getCgmesScaleFactor());
+            shiftLineCoordinates(edge);
         }
         // scale coordinates
         if (layoutParam.getCgmesScaleFactor() != 1) {
@@ -100,22 +105,22 @@ public class CgmesZoneLayout extends AbstractCgmesLayout {
         List<Point> snakeLine = edge.getSnakeLine();
         lineDiagramData.getPoints(diagramName).forEach(point -> {
             snakeLine.add(new Point(point.getX(), point.getY()));
-            setMin(point.getX(), point.getY());
+            setMinMax(point);
         });
 
         if (TopologyKind.BUS_BREAKER.equals(line.getTerminal1().getVoltageLevel().getTopologyKind())) {
             // if bus breaker topology first and last point of lines are shifted
             DiagramPoint firstPoint = lineDiagramData.getFirstPoint(diagramName, LINE_OFFSET);
-            edge.getSnakeLine().get(0).setX(firstPoint.getX());
-            edge.getSnakeLine().get(0).setY(firstPoint.getY());
+            edge.getSnakeLine().getFirst().setX(firstPoint.getX());
+            edge.getSnakeLine().getFirst().setY(firstPoint.getY());
             DiagramPoint lastPoint = lineDiagramData.getLastPoint(diagramName, LINE_OFFSET);
-            edge.getSnakeLine().get(edge.getSnakeLine().size() - 1).setX(lastPoint.getX());
-            edge.getSnakeLine().get(edge.getSnakeLine().size() - 1).setY(lastPoint.getY());
+            edge.getSnakeLine().getLast().setX(lastPoint.getX());
+            edge.getSnakeLine().getLast().setY(lastPoint.getY());
         }
     }
 
-    private void shiftLineCoordinates(BranchEdge edge, double scaleFactor) {
-        Point shift = new Point(-minX + (X_MARGIN / scaleFactor), -minY + (Y_MARGIN / scaleFactor));
+    private void shiftLineCoordinates(BranchEdge edge) {
+        Point shift = new Point(-minX, -minY);
         edge.getSnakeLine().forEach(p -> p.shift(shift));
     }
 
